# PICO-8SEG-4B-LED

c/SEG/: CMakeLists.txt  SEG.c  SEG.h
python/: SEG.py
